// workspace.proto
syntax = "proto3";

package protolake.v1;

option java_multiple_files = true;
option java_package = "protolake.v1";
option java_outer_classname = "WorkspaceProto";

// Workspace configuration for ProtoLake
// This represents the content of protolake.yaml file
message ProtolakeWorkspace {
  // Version of the workspace configuration format
  string version = 1;
  
  // List of lake references in this workspace
  repeated LakeReference lakes = 2;
  
  // Future: workspace-level settings
  // WorkspaceSettings settings = 3;
}

// Reference to a lake within the workspace
message LakeReference {
  // Lake name (unique identifier)
  string name = 1;
  
  // Path relative to workspace root
  string path = 2;
  
  // Optional: Git remote URL for the lake
  string git_url = 3;
}

// Future: Workspace-level settings
// message WorkspaceSettings {
//   // Default build settings
//   // Publishing credentials
//   // etc.
// }
